--- a/web_frontend/templates/index.html
+++ b/web_frontend/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="it" data-theme="dark">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pianificatore settimanale per scuole</title>
     <link rel="stylesheet" href="/static/css/styles.css" />
   </head>
