--- a/web_frontend/templates/index.html
+++ b/web_frontend/templates/index.html
@@ -237,7 +237,7 @@
                 class="input"
                 type="text"
                 id="professor_names"
-                placeholder="Mario Rossi, Bianchi, ..."
+                placeholder="Mario Rossi (Mate), P. Bianchi (Ita), ..."
               />
               <div
                 class="validation-msg"
@@ -350,8 +350,8 @@
                   nell'arco della settimana. Lascia <strong>0</strong> se un
                   professore non ha quella classe. Usa la colonna
                   <em>Docente di classe</em> per consentire allo stesso docente
-                  di superare il limite di 2 ore consecutive/2 ore al giorno
-                  con la classe.
+                  di superare il limite di 2 ore consecutive/2 ore al giorno con
+                  la classe.
                 </p>
               </div>
             </div>
